--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <p id="display_lives">live bullets: </p>
     <p id="display_blanks"></p>
     <button onclick="shootYourself()">You</button>
-    <button onclick="shotThem()">Dealer</button>
-    <p id="display_life"></p>
+    <button onclick="shootThem()">Dealer</button>
+    <p id="display_player_life"></p>
     <p id="display_dealer_life"></p>
 
 </body>
