fix spyglass and phone items, no more single button case, make rounds work properly

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <button class="button button1" onclick="shootThem()">Dealer</button>
         <p id="display_player_life"></p>
         <p id="display_dealer_life"></p>
-        <button class="button button1 beer" id="beer" onclick="useBeer()">Beer</button>
-        <button class="button button1 phone" id="phone" onclick="usePhone()">Phone</button>
-        <button class="button button1 knife" id="knife" onclick="useKnife()">Knife</button>
-        <button class="button button1 spyglass" id="spyglass" onclick="useSpyglass()">Spyglass</button>
+        <button class="button button1 item" id="beer" onclick="useBeer()">Beer</button>
+        <button class="button button1 item" id="knife" onclick="useKnife()">Knife</button>
+        <button class="button button1 item" id="phone" onclick="usePhone()">Phone</button>
+        <button class="button button1 item" id="spyglass" onclick="useSpyglass()">Spyglass</button>
 
     </div>
     <table>
